# mozartdata-scrapertester

./: .gitignore  Makefile  README.md  example.xlsx  jobs.csv  jobs1.xlsx  jobs2.xlsx  jobs3.xlsx  jobs4.xlsx  pyproject.toml  scraper.py  test.py
